--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </body>
 <script>
     document.getElementById('new').onclick = ()=>{
-        open("./请假v2")
+        open("./请假v2/jrxy.html")
     }
     document.getElementById('old').onclick = ()=>{
         open("./请假v1")
