--- a/请假v2/index.html
+++ b/请假v2/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" contenteditable="true">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/css.css">
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.1/jquery.js"></script>
+    <script src="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/jquery/3.6.1/jquery.js"></script>
     <title>请假详情</title>
 </head>
 <body>
@@ -36,8 +36,8 @@
     <div id="four">当前时间:2022-04-02 17:51:50</div>
     <!-- 请假类型 -->
     <div id="five">
-        <div class="abs lab left_len" id="qjlx">请假类型:</div><div class="abs" id="sj">事假</div>
-        <div class="abs lab" id="xylx">需要离校:</div><div class="abs" id="s">是</div>
+        <div class="abs lab left_len" id="qjlx">请假类型:</div><div class="abs" id="sj">外出请假</div>
+        <div class="abs lab" id="xylx">需要离校:</div><div class="abs" id="s">离校</div>
         <div class="abs lab left_len" id="xjgz">销假规则:</div><div class="abs" id="lx">离校、非离校请假需要销假 <span class="ck" id="gzck">查看 ></span></div>
         <div class="abs lab left_len" id="sjxjsj">实际休假时间:</div><div class="abs" id="_">-</div>
     </div>
@@ -47,10 +47,13 @@
         <div class="abs lab left_len" id="kssj">开始时间:</div><div class="abs left_len2" id="kssj2">04-02 17:30</div>
         <div class="abs lab left_len" id="jssj">结束时间:</div><div class="abs left_len2" id="jssj2">04-02 18:30</div>
         <div class="abs lab left_len splc" >审批流程:</div><div class="abs left_len2 splc">共1步 <span class="ck" id="lcck">查看 ></span></div>
+        <div class="abs lab left_len jjlxr" >紧急联系人:</div><div style="margin-left: 12px" class="abs left_len2 jjlxr">18888888888</div>
         <div class="abs lab left_len qjyy" >请假原因:</div><div class="abs left_len2 qjyy">外出有事</div>
         <div class="abs lab left_len fqwz" >发起位置:</div><div class="abs left_len2 fqwz" id="wz">广东省广州市番禺区小谷围街道大学城广药路</div>
         <div class="abs lab left_len csr" >抄送人:</div><div class="abs left_len2 csr">无</div>
-        <div class="abs lab left_len ssxx" >宿舍信息:</div><div class="abs left_len2 ssxx">大学城校区学生宿舍楼</div>
+        <div class="abs lab left_len mdd" >目的地:</div><div class="abs left_len2 mdd">江苏省/南京市/栖霞区/江苏省南京市栖霞区</div>
+        <div class="abs lab left_len ssxx" >宿舍信息:</div><div class="abs left_len2 ssxx">北区-N10-N10B101-1</div>
+        <div class="abs lab left_len fujian" >附件:</div><div id="attachContainer" style="left: 63px" class="abs left_len2 fujian"></div>
         <div class="abs left_len" id="cn">本人承诺填写的信息真实有效，并对本次提交请假的信息真实性负责。</div>
         <span id="time_len">3小时30分钟</span>
     </div>
