添加全屏功能

--- a/请假v2/index.html
+++ b/请假v2/index.html
@@ -8,7 +8,7 @@
     <script src="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/jquery/3.6.1/jquery.js"></script>
     <title>请假详情</title>
 </head>
-<body>
+<body style="overflow: hidden">
     <div id="top">
         <span id="qjxx">请假信息</span>
         <span id="hyewm">核验二维码</span>
